Creates a svg hexagon

--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
   <link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <div class="hexagon"></div>
+<svg height="200" width="175">
+  <polygon points="87,0 173.603,50 173.603,150 87,200 0.397,150 0.397,50" style="fill:none;stroke:black;stroke-width:1"/>
+</svg>
